# artist-mgmt-back

backend/: pyproject.toml
backend/core/apps/albums/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/core/apps/albums/migrations/: 0001_initial.py
backend/core/apps/artists/: admin.py  models.py  selector2.py  selectors.py  serializers.py  services.py  services2.py  urls.py  views.py
backend/core/apps/artists/migrations/: 0001_initial.py  0002_alter_artist_id.py  0003_remove_artist_artist_name_artist_stage_name.py  0004_rename_number_of_albums_released_artist_no_of_albums_released.py  0005_alter_artist_stage_name.py
backend/core/apps/songs/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/core/apps/songs/migrations/: 0001_initial.py  0002_song_release_date.py
backend/core/apps/users/: admin.py  authetication.py  choices.py  managers.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/core/apps/users/migrations/: 0001_initial.py  0002_customuser_is_active.py  0003_alter_customuser_date_of_birth.py  0004_rename_date_joined_customuser_created_at_and_more.py  0005_alter_customuser_id.py  0006_userprofile.py
backend/core/core/: settings.py
